@@ -8,38 +8,43 @@ import java.util.function.Consumer;
 import java.util.stream.Collectors;
 
 public class FactoryJsonArray {
-    public JsonArray handle;
+	public final List<FactoryElement> asList;
+	public JsonArray handle;
 
-    public FactoryJsonArray(JsonArray array) {
-        this.handle = array;
-    }
+	public FactoryJsonArray(JsonArray array) {
+		this.handle = array;
+		this.asList = this.handle.asList().stream()
+			.map(FactoryElement::fromJson)
+			.collect(Collectors.toList());
+	}
 
-    public FactoryElement[] asArray() {
-        return this.handle.asList().stream()
-                .map(FactoryElement::fromJson)
-                .toArray(FactoryElement[]::new);
-    }
+	public FactoryElement[] asArray() {
+		return asList.toArray(new FactoryElement[0]);
+	}
 
-    public List<FactoryElement> asList() {
-        return this.handle.asList().stream()
-                .map(FactoryElement::fromJson)
-                .collect(Collectors.toList());
-    }
+	public void setEntries(List<FactoryElement> elements) {
+		asList.clear();
+		asList.addAll(elements);
+	}
 
-    public List<FactoryJsonObject> asJsonObjectList() {
-        return this.asList().stream().map(FactoryElement::toJsonObject)
-                .collect(Collectors.toList());
-    }
+	public List<FactoryElement> asList() {
+		return asList;
+	}
 
-    public List<FactoryNumber> asLongList() {
-        return this.asList().stream().map(FactoryElement::getNumber).toList();
-    }
+	public List<FactoryJsonObject> asJsonObjectList() {
+		return asList.stream().map(FactoryElement::toJsonObject)
+			.collect(Collectors.toList());
+	}
 
-    public Iterator<FactoryElement> iterator() {
-        return this.asList().iterator();
-    }
+	public List<FactoryNumber> asLongList() {
+		return asList.stream().map(FactoryElement::getNumber).toList();
+	}
 
-    public void forEach(Consumer<FactoryElement> consumer) {
-        this.asList().forEach(consumer);
-    }
+	public Iterator<FactoryElement> iterator() {
+		return asList.iterator();
+	}
+
+	public void forEach(Consumer<FactoryElement> consumer) {
+		asList.forEach(consumer);
+	}
 }
